--- a/Changes
+++ b/Changes
@@ -1,3 +1,4 @@
+    [0.20_01] (the "mst made me do it" release)
         - Only invoke the deleted sub stashing if we run udner a debugger
           (avoid runtime penalty of Sub::Name/Sub::Identify)
         - Spellfixes (RT#54388)
