--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+        - When using the tie() fallback ensure we do not obliterate a
+          foreign tie()
+        - Better document how to disable the tie() fallback
+
     [0.20_01] (the "mst made me do it" release)
         - Only invoke the deleted sub stashing if we run udner a debugger
           (avoid runtime penalty of Sub::Name/Sub::Identify)
