Fix all debugger issues from perl 5.8.1 on FC++ (RT#69862)

--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+        - Limit the debugger workarounds to perls between 5.8.8 and 5.14,
+          extend debugger support to all perl versions (FC) (RT#69862)
         - Add back dropped NAME section (RT#70259)
 
     [0.21]
