Disable the debugger fixup entirely on perl 5.15.5+

--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+        - Compile away the debugger fixup on perls >= 5.15.5
+
     [0.21_01]
         - More robust handling of the tied %^H in pure perl mode (RT#73402)
         - Limit the debugger workarounds to perls between 5.8.8 and 5.14,
