--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
         - Properly skip debugger test when optional deps not available
         - Make sure pure-perl tests pass correctly on space-containing
           paths (RT#77528)
+        - Remove all the pure-perl fallback code and depend on PP-capable
+          B::H::EOS 0.12
 
     [0.23]
         - Rely on B::Hooks::EndOfScope version 0.10 to fix issues with
