--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+        - Properly skip debugger test when optional deps not available
+
     [0.23]
         - Rely on B::Hooks::EndOfScope version 0.10 to fix issues with
           new Module::Runtime versions (>= 0.012) on perl 5.10 due
