--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+        - Exclusively use Package::Stash::PP on perls < 5.8.7 until a fixed
+          Package::Stash::XS ships - breakage keeps getting reintroduced
+          ( RT#107343, RT#74151 )
+
     [0.25]
         - Fix incorrect ExtUtils::CBuilder detection routine leading to
           Makefile.PL crashes when EU::CB is not available
