Restrict debugger workaround to when DB::sub will be used
The issues with the debugger only arise when DB::sub will be called.
Since the workaround requires XS modules, avoid it unless actually
needed.  This avoids XS prereqs when using modules like Devel::Confess
that use debugger features but don't require the workaround.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 
+        - Ensure the debugger workarounds are applied only when
+          DB::sub is actively used (they are superfluous otherwise)
         - Work around P5#72210, resulting in fails on 5.8.8 -Duselongdouble
         - Fix incorrect name in META (RT#107813)
 
