--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 
+        - Work around P5#72210, resulting in fails on 5.8.8 -Duselongdouble
         - Fix incorrect name in META (RT#107813)
 
 0.26  2015-10-07 17:43 (UTC)
