--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+
+        - Fix incorrect name in META (RT#107813)
+
 0.26  2015-10-07 17:43 (UTC)
         - Exclusively use Package::Stash::PP on perls < 5.8.7 until a fixed
           Package::Stash::XS ships - breakage keeps getting reintroduced
